--- a/advect.org/src/views/pages/error.edge
+++ b/advect.org/src/views/pages/error.edge
@@ -1,4 +1,3 @@
-@assign(page = await app.queryItem("Pages", { slug: "/" }))
 @layout.page({
   title: Error
 })
@@ -19,11 +18,11 @@
     <span slot="h1">
       Error
       <strong class="font-extrabold text-red-700 sm:block">
-        {{error.code}}
+        {{ctx.error.code}}
       </strong>
     </span>
     <span slot="blurb">
-    {{error.message}}
+    {{ctx.error.message}}
 
     </span>
     <div slot="content" class="bg-white w-full p-4">
@@ -37,7 +36,7 @@
 
 <section class="max-w-2xl mx-auto">
   <code>
-    {{errorFile.toString()}}
+    {{ctx.error.stack.toString()}}
   </code>
 </section>
 @end
