--- a/advect.org/assets/components/adv-org-hero.html
+++ b/advect.org/assets/components/adv-org-hero.html
@@ -1,4 +1,4 @@
-<template dom-mode="light" id="adv-org-hero" adv>
+<template  id="adv-org-hero" adv>
   <style>
     .hero {
       --grid-color: rgba(0, 0, 0, 0.1);
