--- a/advect.org/src/views/components/layout/header.edge
+++ b/advect.org/src/views/components/layout/header.edge
@@ -1,23 +1,82 @@
-<nav class="flex gap-2 justify-between p-2 items-center">
+<nav class="flex gap-2 justify-between p-4 items-center bg-white h-[50px]">
   <style>
     @scope {
       :scope {
-        [for="nav-closer"]{
-            display:none;
+        & [for="nav-toggle"]{
+          svg {
+            width: 1.5rem;
+          }
         }
+
+        & #nav-items {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+          }
+
+        @media (min-width: 769px) {
+
+          & #nav-items {
+            flex-direction: row;
+
+          }
+
+
+          [for="nav-toggle"] {
+            display: none;
+          }
+
+          & [data-mobile-nav] {
+            display: contents;
+          }
+        }
+
         @media (max-width: 768px) {
-          [for="nav-closer"]{
-            display:block;
+          [for="nav-toggle"] {
+            display: block;
           }
-          &:has(#nav-closer:checked) {
-
+          & #nav-items {
+            
           }
 
-          &:not(:has(#nav-closer:checked)) {
-            #nav-items {
+          & [data-mobile-nav] {
+              display: block;
+              height: 100dvh;
+              width: 280px;
+              position: absolute;
+              left: calc(100% - 280px);
+              opacity: 1;
+              top: 50px;
+            }
+
+          &:has(#nav-toggle:checked) {
+            & [data-opener] {
               display: none;
             }
+
+            & [data-closer] {
+              display: initial;
+            }
+          
           }
+
+          &:not(:has(#nav-toggle:checked)) {
+            & [data-opener] {
+              display: initial;
+            }
+
+            & [data-closer] {
+              display: none;
+            }
+
+            & [data-mobile-nav] {
+              left: calc(100% + 280px);
+              opacity: 0;
+
+            }
+          }
+
+
         }
       }
     }
@@ -25,25 +84,38 @@
   <a href="/" class="block">
     <img src="/assets/logo.svg" width="20" height="20" alt="">
   </a>
-  <ul id="nav-items" class="flex gap-4 items-center">
-    <li>About</li>
-    <li>Blog</li>
-    <li>Editor</li>
-    <li>
-      <adv-auth>
-        <div class="flex gap-1" slot="invalid">
-          <a href="/auth/sign-in">Sign In</a>
-          <span> / </span>
-          <a href="/auth/sign-up">Register</a>
-        </div>
-        <div slot="valid">
+  <adv-search class="block"></adv-search>
+  <dialog class="transition-all border-2 border-r-0" data-mobile-nav open>
+    <ul id="nav-items">
+      <li>About</li>
+      <li>Blog</li>
+      <li>Editor</li>
+      <li>
+        <adv-auth>
+          <div class="flex gap-1" slot="invalid">
+            <a href="/auth/sign-in">Sign In</a>
+            <span> / </span>
+            <a href="/auth/sign-up">Register</a>
+          </div>
+          <div slot="valid">
             <a href="/profile/">My profile</a>
-        </div>
-      </adv-auth>
-    </li>
-  </ul>
-  <label for="nav-closer" class="">
-    <span class="cursor-pointer"> X </span>
-    <input id="nav-closer" type="checkbox" class="hidden" />
+          </div>
+        </adv-auth>
+      </li>
+    </ul>
+
+  </dialog>
+  <label for="nav-toggle" class="">
+    <span class="cursor-pointer" data-closer> 
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+      </svg>
+    </span>
+    <span class="cursor-pointer" data-opener> 
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+      </svg>
+    </span>
+    <input id="nav-toggle" type="checkbox" class="hidden" />
   </label>
 </nav>
