--- a/advect.org/assets/components/adv-org-card.html
+++ b/advect.org/assets/components/adv-org-card.html
@@ -78,7 +78,7 @@
 
 
   </script>
-  <div class="relative w-full h-[350px]">
+  <div class="relative w-full h-[80dvh]">
       <div ref="canvas_wrapper" class="absolute top-0 left-0 h-[350px]">
           <slot></slot>
       </div>
