--- a/advect.org/src/views/pages/home.edge
+++ b/advect.org/src/views/pages/home.edge
@@ -14,8 +14,8 @@
   </script>
   <script type="text/adv" src="/assets/components/adv-org-hero.html"></script>
   <script type="text/adv" src="/assets/components/adv-org-card.html"></script>
-  <section class="hero-section">
-    <adv-org-hero>
+  <section >
+    <adv-org-hero class="h-screen block">
       <span slot="h1">
         Advect
         <strong class="font-extrabold text-red-700 sm:block">
@@ -25,7 +25,6 @@
       <span slot="blurb">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
         illo tenetur fuga ducimus numquam ea!
-
       </span>
       <div slot="content">
         <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
@@ -42,11 +41,9 @@
   <section>
     <my-ting></my-ting>
   </section>
+
   <section class="max-w-4xl mx-auto">
-    {{{`${page?.rich_content}`}}}
-  </section>
-  <section class="max-w-4xl mx-auto">
-    {{{`${edjs(page.blocks)}`}}}
+  
   </section>
   @end
   @slot('footer')
