--- a/advect.org/src/views/components/editor_nodes/Banners.edge
+++ b/advect.org/src/views/components/editor_nodes/Banners.edge
@@ -1,1 +1,6 @@
-{{ JSON.stringify(block) }}
+<div>
+    <script type="application/json">
+        {{{ JSON.stringify(block) }}}
+    </script>
+    {{{ block.content }}}
+</div>
