--- a/advect.org/src/views/pages/home.edge
+++ b/advect.org/src/views/pages/home.edge
@@ -18,7 +18,7 @@
   <script type="text/adv" src="/assets/components/adv-org-hero.html"></script>
   <script type="text/adv" src="/assets/components/adv-org-card.html"></script>
   <section >
-    <adv-org-hero class="h-screen block">
+    <adv-org-hero class="xl:h-screen block">
       <span slot="h1">
         Advect
         <strong class="font-extrabold text-red-700 sm:block">
