--- a/advect.org/src/views/components/layout/page.edge
+++ b/advect.org/src/views/components/layout/page.edge
@@ -8,7 +8,7 @@
   <link rel="prefetch" href="/assets/advect.js" />
   <script type="text/adv" src="/assets/components/adv-auth.html"></script>
   <script type="text/adv" src="/assets/components/adv-search.html"></script>
-
+  <link rel="icon" type="image/x-icon" href="/assets/logo.svg">
   <script>
     window.adv_config = {
       shim: {
@@ -52,7 +52,56 @@
       max-width: 99vw;
       overflow-x: hidden;
     }
+    body {
 
+    h1, .h1{
+      font-size: 2.25rem;
+      line-height: 2.5rem;
+      font-weight: 700;
+    }
+    h2, .h2{
+      font-size: 1.875rem;
+      line-height: 2.25rem;
+      font-weight: 700;
+    }
+    h3, .h3{
+      font-size: 1.5rem;
+      line-height: 2rem;
+      font-weight: 700;
+    }
+    h4, .h4{
+      font-size: 1.25rem;
+      line-height: 1.75rem;
+      font-weight: 700;
+    }
+    p, .p{
+      font-size: 1rem;
+      line-height: 1.5rem;
+      font-weight: 400;
+    }
+    a, .a{
+      font-size: 1rem;
+      line-height: 1.5rem;
+      font-weight: 400;
+    }
+    ul, .ul{
+      font-size: 1rem;
+      line-height: 1.5rem;
+      font-weight: 400;
+    }
+    ol, .ol{
+      font-size: 1rem;
+      line-height: 1.5rem;
+      font-weight: 400;
+
+    }
+    li, .li{
+      font-size: 1rem;
+      line-height: 1.5rem;
+      font-weight: 400;
+    }
+
+  }
 
  
   </style>
