--- a/advect.org/src/views/pages/docs/home.edge
+++ b/advect.org/src/views/pages/docs/home.edge
@@ -7,11 +7,26 @@
 @end
 
 @slot('content')
-<section class="bg-gray-50 text-black hero">
-    <adv-view>
-        
-    </adv-view>
+<section class="block mt-[50px] mx-auto max-w-6xl" >
+    <h1 class="advect-effect leading-[2]" ">
+      Advect Documentation
+    </h1>
+    <hr>
 </section>
+<section class="mx-auto max-w-6xl ">
+  <h2 class="advect-effect leading-[2]">
+    Getting Started
+  </h2>
+  <hr>
+</section>
+<section class="mx-auto max-w-6xl">
+  <h2 class="advect-effect leading-[2]">
+    Installation
+  </h2>
+  <hr>
+
+</section>
+
 @end
 
   @slot('footer')
