need a working editor

--- a/advect.org/src/views/components/playground/monaco.edge
+++ b/advect.org/src/views/components/playground/monaco.edge
@@ -1,5 +1,5 @@
 @assign(elId = `editor-${Math.random().toString(36).substring(7)}`)
-<div id="{{elId}}">
+<div data-manaco id="{{elId}}">
     <style>
         @scope {
             :scope {
@@ -23,17 +23,21 @@
     <script type="module">
         import * as monaco from 'https://cdn.jsdelivr.net/npm/monaco-editor@0.39.0/+esm';
         setTimeout(() => {
-            monaco.editor.create(document.querySelector("#{{elId}} .monaco"),{
+            window.editor_instance = monaco.editor.create(document.querySelector("#{{elId}} .monaco"),{
                 language: 'html',
                 theme:'vs-dark',
-                value: '{{{ value || `<adv-view></adv-view>`}}}'
+                value: "{{{ value || `<adv-view data-name='John' onload='$self.render()'>Hey my name is {{=name}}</adv-view>`}}}"
             })
         }, 500);
     </script>
     <link href="https://cdn.jsdelivr.net/npm/vscode-codicons@0.0.17/dist/codicon.min.css" rel="stylesheet">
     <div class="wrapper">
         <div class="monaco"></div>
-        <div class="output"></div>
+        <div class="output">
+            @if ($slots.output)
+            {{{ await $slots.output() }}}
+            @end
+        </div>
     </div>
 
 </div>
