--- a/advect.org/src/views/components/layout/page.edge
+++ b/advect.org/src/views/components/layout/page.edge
@@ -119,7 +119,13 @@
       background-clip: text;
       color: transparent;
         background-image:linear-gradient(0deg,  #010020, white,  white, #010020);
+        background-attachment: fixed;
+      
       }
+
+
+
+ 
   </style>
 
   
@@ -147,7 +153,7 @@
     {{{ await $slots.sidebar() }}}
     @end
   </aside>
-  <main>
+  <main class="mt-[50px]">
     @if ($slots.content)
     {{{ await $slots.content() }}}
     @end
