--- a/advect.org/src/views/pages/docs/home.edge
+++ b/advect.org/src/views/pages/docs/home.edge
@@ -1,4 +1,4 @@
-@layout.page({ title: `Editor ${ctx?.params?.id}` })
+@layout.page({ title: `Advect Docs` })
 
 
 @slot('header')
@@ -7,7 +7,7 @@
 @end
 
 @slot('content')
-<section class="block mt-[50px] mx-auto max-w-6xl" >
+<section class="block mx-auto max-w-6xl" >
     <h1 class="advect-effect leading-[2]" ">
       Advect Documentation
     </h1>
@@ -24,7 +24,34 @@
     Installation
   </h2>
   <hr>
+</section>
+<section class="mx-auto max-w-6xl">
+  <h2 class="advect-effect leading-[2]">
+    Creating a component (AdvectElements)
+  </h2>
+  <hr>
+  <h3 class="advect-effect leading-[2]">
+    Referencing the Dom
+  </h3>
+  <hr>
+  <h3 class="advect-effect leading-[2]">
+    Creating a Scope
+  </h3>
+  <hr>
 
+  <h3 class="advect-effect leading-[2]">
+    Accessing a Scope outside of the component
+  </h3>
+  <hr>
+
+  <h3 class="advect-effect leading-[2]">
+    Adding Event Listeners
+  </h3>
+  <hr>
+  <h3 class="advect-effect leading-[2]">
+    Advect Specific Events
+  </h3>
+  <hr>
 </section>
 
 @end
