--- a/advect.org/src/views/pages/docs/home.edge
+++ b/advect.org/src/views/pages/docs/home.edge
@@ -8,47 +8,47 @@
 
 @slot('content')
 <section class="block mx-auto max-w-6xl" >
-    <h1 class="advect-effect leading-[2]" ">
+    <h1 class="signature-effect leading-[2]" ">
       Advect Documentation
     </h1>
     <hr>
 </section>
 <section class="mx-auto max-w-6xl ">
-  <h2 class="advect-effect leading-[2]">
+  <h2 class="signature-effect leading-[2]">
     Getting Started
   </h2>
   <hr>
 </section>
 <section class="mx-auto max-w-6xl">
-  <h2 class="advect-effect leading-[2]">
+  <h2 class="signature-effect leading-[2]">
     Installation
   </h2>
   <hr>
 </section>
 <section class="mx-auto max-w-6xl">
-  <h2 class="advect-effect leading-[2]">
+  <h2 class="signature-effect leading-[2]">
     Creating a component (AdvectElements)
   </h2>
   <hr>
-  <h3 class="advect-effect leading-[2]">
+  <h3 class="signature-effect leading-[2]">
     Referencing the Dom
   </h3>
   <hr>
-  <h3 class="advect-effect leading-[2]">
+  <h3 class="signature-effect leading-[2]">
     Creating a Scope
   </h3>
   <hr>
 
-  <h3 class="advect-effect leading-[2]">
+  <h3 class="signature-effect leading-[2]">
     Accessing a Scope outside of the component
   </h3>
   <hr>
 
-  <h3 class="advect-effect leading-[2]">
+  <h3 class="signature-effect leading-[2]">
     Adding Event Listeners
   </h3>
   <hr>
-  <h3 class="advect-effect leading-[2]">
+  <h3 class="signature-effect leading-[2]">
     Advect Specific Events
   </h3>
   <hr>
