--- a/advect.org/src/views/pages/home.edge
+++ b/advect.org/src/views/pages/home.edge
@@ -1,5 +1,5 @@
 @assign(page = await app.queryItem("Pages", { slug: "/" }))
-@assign(content = app.injectDataIntoContent(page.editor_nodes, page.content))
+@assign(nodes = app.injectDataIntoContent(page.editor_nodes, page.content))
 
 @layout.page({
     title: page.title,
@@ -15,17 +15,16 @@
     {{{ JSON.stringify(page) }}}
   </script>
 
-  <script type="text/adv" src="/assets/components/adv-org-hero.html"></script>
-  <script type="text/adv" src="/assets/components/adv-org-card.html"></script>
-
-
-  <section >
+@file.embed({ src: './assets/components/adv-org-hero.html' }) 
+  
+@end
+  <section>
     <adv-org-hero class="xl:h-screen block">
-      <span slot="h1">
-        <span class="advect-effect">
+      <span slot="h1" class="signature-effect">
+        <span >
           Advect
           </span>
-        <strong class="font-extrabold text-red-700 sm:block">
+        <strong class="font-extrabold">
           Web Components
         </strong>
       </span>
@@ -34,7 +33,7 @@
         illo tenetur fuga ducimus numquam ea!
       </span>
       <div slot="content">
-        <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
+        <a class="btn"
           href="#">
           Get Started
         </a>
@@ -45,10 +44,9 @@
       </div>
     </adv-org-hero>
   </section>
-    @!component('components/editor_nodes/tiptap', { content:content.content })
+    @!component('components/editor_nodes/tiptap', { content:nodes.content })
   @end
   @slot('footer')
-  
     @layout.newsLetter()
     @end
     @layout.footer()
